--- a/tests/unit-tests/CMakeLists.txt
+++ b/tests/unit-tests/CMakeLists.txt
@@ -5,9 +5,9 @@ add_executable(unit_tests
 #  test_iterator.cc
   test_noncopyable_types.cc
 #  test_resize.cc
-  test_runner.cc #+
+  test_runner.cc
  # test_user_exceptions.cc
-#  test_locked_table.cc
+  test_locked_table.cc
   test_libcuckoo_bucket_container.cc
   unit_test_util.cc
   unit_test_util.hh
