change stress tests extension

--- a/tests/stress-tests/CMakeLists.txt
+++ b/tests/stress-tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(stress_unchecked stress_unchecked.cc)
+add_executable(stress_unchecked stress_unchecked.cpp)
 target_link_libraries(stress_unchecked
         PRIVATE concurrent_hash_map
         PRIVATE pcg
@@ -7,7 +7,7 @@ target_link_libraries(stress_unchecked
 add_test(NAME stress_unchecked COMMAND stress_unchecked)
 
 add_executable(stress_checked
-        stress_checked.cc
+        stress_checked.cpp
 )
 target_link_libraries(stress_checked
         PRIVATE concurrent_hash_map
@@ -17,7 +17,7 @@ add_test(NAME stress_checked COMMAND stress_checked)
 
 find_package(Boost COMPONENTS system thread REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
-add_executable(benchmark benchmark.cc)
+add_executable(benchmark benchmark.cpp)
 target_link_libraries(benchmark
         PRIVATE ${Boost_SYSTEM_LIBRARY}
         PRIVATE ${Boost_THREAD_LIBRARY}
