Added fallback to shared spin mutex for non pod types, added bechmark on complex types

--- a/tests/stress-tests/CMakeLists.txt
+++ b/tests/stress-tests/CMakeLists.txt
@@ -1,7 +1,14 @@
+find_package(Boost COMPONENTS system thread REQUIRED)
+
+include_directories(${Boost_INCLUDE_DIRS})
+include_directories(${Libcuckoo_INCLUDE_DIRS})
+include_directories(${Folly_INCLUDE_DIRS})
+
 add_executable(stress_unchecked stress_unchecked.cpp)
 target_link_libraries(stress_unchecked
         PRIVATE concurrent_hash_map
         PRIVATE pcg
+        PRIVATE ${Boost_SYSTEM_LIBRARY}
 )
 
 add_test(NAME stress_unchecked COMMAND stress_unchecked)
@@ -12,13 +19,10 @@ add_executable(stress_checked
 target_link_libraries(stress_checked
         PRIVATE concurrent_hash_map
         PRIVATE pcg
+        PRIVATE ${Boost_SYSTEM_LIBRARY}
 )
 add_test(NAME stress_checked COMMAND stress_checked)
 
-find_package(Boost COMPONENTS system thread REQUIRED)
-include_directories(${Boost_INCLUDE_DIRS})
-include_directories(${Libcuckoo_INCLUDE_DIRS})
-include_directories(${Folly_INCLUDE_DIRS})
 link_directories(${Folly_LIB_DIRS})
 add_executable(benchmark benchmark.cpp)
 target_link_libraries(benchmark
